new Integer(int) which is deprecated is changed with Integer.valueOf in CharNumberCount class